Uppercase menu items

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,6 +8,10 @@
     width: 500px;
 }
 
+.segment-select .mdc-menu .mdc-list-item {
+    text-transform: uppercase;
+}
+
 @media (max-width: 800px) {
 
     .segment-select {
